@@ -1,3 +1,6 @@
+Thursday, 28 July 2022: Version 0.8.2
+        Fixed the bug that directory naming failed when saving some series videos.
+
 Sunday, 10 July 2022: Version 0.8.1
         Allowed users to view the size of encrypted videos.
 
